# gps2026

./: README.md
gps2026-journey-practice/: CMakeLists.txt
gps2026-journey-practice/apps/: main.cpp
gps2026-journey-practice/include/: journey.h  timedwaypoint.h
gps2026-journey-practice/include/gpx/: gpx-parser.h
gps2026-journey-practice/src/: geometry.cpp  journey.cpp
gps2026-journey-practice/src/gpx/: gpx-parser.cpp
gps2026-journey-practice/src/xml/: xml-parser.cpp
